--- a/portfolio.html
+++ b/portfolio.html
@@ -12,9 +12,11 @@
         <div class="container">
             <div class="logo">Andy Hang</div>
             <div class="nav-bar">
-                <a href="index.html">About</a>
-                <a href="portfolio.html">Portfolio</a>
-                <a href="contact.html">Contact</a>
+                <ul>
+                    <li><a href="index.html">About</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
             </div>
         </div>
     </header>
