--- a/contact.html
+++ b/contact.html
@@ -12,15 +12,17 @@
         <div class="container">
             <div class="logo">Andy Hang</div>
             <div class="nav-bar">
-                <a href="index.html">About</a>
-                <a href="portfolio.html">Portfolio</a>
-                <a href="contact.html">Contact</a>
+                <ul>
+                    <li><a href="index.html">About</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
             </div>
         </div>
     </header>
 
     <div class="container">
-        <div class="main-container">
+        <div class="main-container container-contact">
 
             <h1>Contact</h1>
             <form>
